[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheus-ganeti-exporter"
version = "1.1.0"
description = "Prometheus exporter for Ganeti cluster statistics"
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-2-Clause"
authors = [
    { name = "Ganeti Project" },
    { name = "Wikimedia Foundation" },
]
maintainers = [
    { name = "Ganeti Project" },
]
keywords = [
    "prometheus",
    "exporter",
    "ganeti",
    "monitoring",
    "metrics",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "prometheus-client>=0.9.0",
    "requests>=2.25.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pylint>=2.15.0",
    "pytest>=7.0.0",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/ganeti/prometheus-ganeti-exporter"
Repository = "https://github.com/ganeti/prometheus-ganeti-exporter"
Issues = "https://github.com/ganeti/prometheus-ganeti-exporter/issues"
Documentation = "https://github.com/ganeti/prometheus-ganeti-exporter#readme"

[project.scripts]
prometheus-ganeti-exporter = "prometheus_ganeti_exporter.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.pylint.main]
rcfile = "pylintrc"
